--- a/otpcredentialprovider/OTPCredentialProvider.vcxproj
+++ b/otpcredentialprovider/OTPCredentialProvider.vcxproj
@@ -141,7 +141,7 @@
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
       <AdditionalIncludeDirectories>$(SolutionDir)Helpers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <WarningLevel>Level4</WarningLevel>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
@@ -168,7 +168,7 @@
     <ClCompile>
       <AdditionalIncludeDirectories>$(SolutionDir)Helpers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <WarningLevel>Level4</WarningLevel>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
@@ -186,12 +186,14 @@
     <ClCompile Include="CSampleCredential.cpp" />
     <ClCompile Include="CSampleProvider.cpp" />
     <ClCompile Include="guid.cpp" />
+    <ClCompile Include="OTPProvider.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="CSampleCredential.h" />
     <ClInclude Include="CSampleProvider.h" />
     <ClInclude Include="guid.h" />
+    <ClInclude Include="OTPProvider.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
