更改USBKey验证框架

--- a/usbkeycredentialprovider/USBKeyCredentialProvider.vcproj
+++ b/usbkeycredentialprovider/USBKeyCredentialProvider.vcproj
@@ -3,8 +3,8 @@
 	ProjectType="Visual C++"
 	Version="9.00"
 	Name="USBKeyCredentialProvider"
-	ProjectGUID="{B62652D4-C669-4114-95E8-E7D110C45238}"
-	RootNamespace="SampleCredentialProvider"
+	ProjectGUID="{2DF895C3-D1B4-4632-8F76-F06670A0D311}"
+	RootNamespace="USBKeyCredentialProvider"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
@@ -65,7 +65,7 @@
 				ShowProgress="2"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;C:\program Files\microsoft sdKs\Windows\v1.0\Lib&quot;"
-				ModuleDefinitionFile="USBKeyCredentialProvider.def"
+				ModuleDefinitionFile="usbkeycredentialprovider.def"
 				AddModuleNamesToAssembly="secur32.lib"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
@@ -122,7 +122,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;C:\Program Files\Microsoft SDKs\Windows\v1.0\Include&quot;;&quot;$(SolutionDir)Helpers&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)Helpers&quot;"
 				WarningLevel="4"
 				WarnAsError="true"
 				DebugInformationFormat="3"
@@ -198,7 +198,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				InlineFunctionExpansion="0"
-				AdditionalIncludeDirectories="&quot;C:\Program Files\Microsoft SDKs\Windows\v1.0\Include&quot;;&quot;$(SolutionDir)Helpers&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)Helpers&quot;"
 				WarningLevel="4"
 				WarnAsError="true"
 				DebugInformationFormat="3"
@@ -215,11 +215,11 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="false"
-				AdditionalDependencies="secur32.lib shlwapi.lib gdi32.lib ole32.lib user32.lib advapi32.lib credui.lib"
+				AdditionalDependencies="secur32.lib shlwapi.lib credui.lib"
 				ShowProgress="2"
-				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;C:\program Files\microsoft sdKs\Windows\v1.0\Lib&quot;"
-				ModuleDefinitionFile="USBKeyCredentialProvider.def"
+				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;C:\program Files\microsoft sdKs\Windows\v1.0\Lib\x64&quot;"
+				ModuleDefinitionFile="usbkeycredentialprovider.def"
 				AddModuleNamesToAssembly="secur32.lib"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
@@ -279,7 +279,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;C:\Program Files\Microsoft SDKs\Windows\v1.0\Include&quot;;&quot;$(SolutionDir)Helpers&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)Helpers&quot;"
 				WarningLevel="4"
 				WarnAsError="true"
 				DebugInformationFormat="3"
@@ -298,8 +298,8 @@
 				AdditionalDependencies="secur32.lib shlwapi.lib gdi32.lib ole32.lib user32.lib advapi32.lib credui.lib"
 				ShowProgress="2"
 				OutputFile="$(OutDir)\$(ProjectName).dll"
-				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;C:\program Files\microsoft sdKs\Windows\v1.0\Lib&quot;"
+				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;C:\program Files\microsoft sdKs\Windows\v1.0\Lib\x64&quot;"
 				ModuleDefinitionFile="usbkeycredentialprovider.def"
 				AddModuleNamesToAssembly="secur32.lib"
 				GenerateDebugInformation="true"
@@ -340,10 +340,6 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\CommandWindow.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\CSampleCredential.cpp"
 				>
 			</File>
@@ -355,20 +351,12 @@
 				RelativePath=".\guid.cpp"
 				>
 			</File>
-			<File
-				RelativePath=".\MessageCredential.cpp"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath=".\CommandWindow.h"
-				>
-			</File>
 			<File
 				RelativePath=".\common.h"
 				>
@@ -383,10 +371,6 @@
 			</File>
 			<File
 				RelativePath=".\guid.h"
-				>
-			</File>
-			<File
-				RelativePath=".\MessageCredential.h"
 				>
 			</File>
 			<File
