USBKey登陆部分完成

--- a/usbkeycredentialprovider/USBKeyCredentialProvider.vcxproj
+++ b/usbkeycredentialprovider/USBKeyCredentialProvider.vcxproj
@@ -168,7 +168,7 @@
     <ClCompile>
       <AdditionalIncludeDirectories>$(SolutionDir)Helpers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <WarningLevel>Level4</WarningLevel>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
@@ -186,6 +186,7 @@
     <ClCompile Include="CSampleCredential.cpp" />
     <ClCompile Include="CSampleProvider.cpp" />
     <ClCompile Include="guid.cpp" />
+    <ClCompile Include="USBProvider.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
@@ -193,6 +194,7 @@
     <ClInclude Include="CSampleProvider.h" />
     <ClInclude Include="guid.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="USBProvider.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resources.rc" />
