--- a/facerecognizecredentialprovider/FaceRecognizeCredentialProvider.vcxproj
+++ b/facerecognizecredentialprovider/FaceRecognizeCredentialProvider.vcxproj
@@ -168,7 +168,7 @@
     <ClCompile>
       <AdditionalIncludeDirectories>$(SolutionDir)Helpers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <WarningLevel>Level4</WarningLevel>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
@@ -185,12 +185,14 @@
   <ItemGroup>
     <ClCompile Include="CSampleCredential.cpp" />
     <ClCompile Include="CSampleProvider.cpp" />
+    <ClCompile Include="FaceRecognize.cpp" />
     <ClCompile Include="guid.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="CSampleCredential.h" />
     <ClInclude Include="CSampleProvider.h" />
+    <ClInclude Include="FaceRecognize.h" />
     <ClInclude Include="guid.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
