--- a/facerecognizecredentialprovider/FaceRecognizeCredentialProvider.vcxproj.filters
+++ b/facerecognizecredentialprovider/FaceRecognizeCredentialProvider.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="guid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FaceRecognize.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FaceRecognize.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
