--- a/facerecognizecredentialprovider/FaceRecognizeCredentialProvider.vcxproj
+++ b/facerecognizecredentialprovider/FaceRecognizeCredentialProvider.vcxproj
@@ -69,22 +69,30 @@
     <IntDir>$(Configuration)\</IntDir>
     <IgnoreImportLibrary>false</IgnoreImportLibrary>
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>D:\opencv\new_build\install\include\opencv;D:\opencv\new_build\install\include\opencv2;D:\opencv\new_build\install\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\opencv\new_build\install\x64\vc15\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>D:\opencv\new_build\install\include\opencv;D:\opencv\new_build\install\include\opencv2;D:\opencv\new_build\install\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\opencv\new_build\install\x64\vc15\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
     <IgnoreImportLibrary>false</IgnoreImportLibrary>
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>D:\libfacedetection\include;D:\opencv\new_build\install\include\opencv2;D:\opencv\new_build\install\include\opencv;D:\opencv\new_build\install\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\libfacedetection\lib;D:\opencv\new_build\install\x64\vc15\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>D:\libfacedetection\include;D:\opencv\new_build\install\include\opencv2;D:\opencv\new_build\install\include\opencv;D:\opencv\new_build\install\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\libfacedetection\lib;D:\opencv\new_build\install\x64\vc15\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -96,7 +104,7 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>secur32.lib;shlwapi.lib;gdi32.lib;ole32.lib;user32.lib;advapi32.lib;credui.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_img_hash341.lib;opencv_world341.lib;secur32.lib;shlwapi.lib;gdi32.lib;ole32.lib;user32.lib;advapi32.lib;credui.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerboseLib</ShowProgress>
       <AdditionalLibraryDirectories>C:\program Files\microsoft sdKs\Windows\v1.0\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <ModuleDefinitionFile>facerecognizecredentialprovider.def</ModuleDefinitionFile>
@@ -121,7 +129,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>secur32.lib;shlwapi.lib;gdi32.lib;ole32.lib;user32.lib;advapi32.lib;credui.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_img_hash341.lib;opencv_world341.lib;secur32.lib;shlwapi.lib;gdi32.lib;ole32.lib;user32.lib;advapi32.lib;credui.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerboseLib</ShowProgress>
       <OutputFile>$(OutDir)$(ProjectName).dll</OutputFile>
       <AdditionalLibraryDirectories>C:\program Files\microsoft sdKs\Windows\v1.0\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
@@ -145,7 +153,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>secur32.lib;shlwapi.lib;credui.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libfacedetect-x64.lib;opencv_img_hash341.lib;opencv_world341.lib;secur32.lib;shlwapi.lib;credui.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerboseLib</ShowProgress>
       <AdditionalLibraryDirectories>C:\program Files\microsoft sdKs\Windows\v1.0\Lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <ModuleDefinitionFile>facerecognizecredentialprovider.def</ModuleDefinitionFile>
@@ -172,7 +180,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>secur32.lib;shlwapi.lib;gdi32.lib;ole32.lib;user32.lib;advapi32.lib;credui.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libfacedetect-x64.lib;opencv_img_hash341.lib;opencv_world341.lib;secur32.lib;shlwapi.lib;gdi32.lib;ole32.lib;user32.lib;advapi32.lib;credui.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerboseLib</ShowProgress>
       <OutputFile>$(OutDir)$(ProjectName).dll</OutputFile>
       <AdditionalLibraryDirectories>C:\program Files\microsoft sdKs\Windows\v1.0\Lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
