完成了人脸识别配合声纹识别

--- a/facerecognizecredentialprovider/FaceRecognizeCredentialProvider.vcxproj.filters
+++ b/facerecognizecredentialprovider/FaceRecognizeCredentialProvider.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="FaceRecognize.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mfcc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gmm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
@@ -48,6 +54,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FaceRecognize.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gmm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="mfcc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
