--- a/facerecognizecredentialprovider/FaceRecognizeCredentialProvider.vcxproj
+++ b/facerecognizecredentialprovider/FaceRecognizeCredentialProvider.vcxproj
@@ -194,14 +194,18 @@
     <ClCompile Include="CSampleCredential.cpp" />
     <ClCompile Include="CSampleProvider.cpp" />
     <ClCompile Include="FaceRecognize.cpp" />
+    <ClCompile Include="gmm.cpp" />
     <ClCompile Include="guid.cpp" />
+    <ClCompile Include="mfcc.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="CSampleCredential.h" />
     <ClInclude Include="CSampleProvider.h" />
     <ClInclude Include="FaceRecognize.h" />
+    <ClInclude Include="gmm.h" />
     <ClInclude Include="guid.h" />
+    <ClInclude Include="mfcc.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
